Move all JVM options to JVM_OPTS, add more flags