@@ -10,9 +10,9 @@ MAINTAINER Joshua Krage <jkrage@guisarme.us>
 ###
 ###   SPIGOT_REV specifies the version of Spigot built (default: 1.8.8)
 ###   SPIGOT_BUILD_REV specifies the version of Spigot source code to pull (default: latest)
-###   JVM_OPT_XmX sets the JVM option for maximum memory size (default: -Xmx1024M)
-###   JVM_OPT_Xms sets the JVM option for starting memory size (default: -Xms512M)
-###
+###   JVM_OPTS sets the JVM options, such as memory size and garbage collection
+###     Default:
+###       -Xms512M -Xmx512M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts
 ###   MINECRAFT_BASE is the top-level directory for the rest (default: /minecraft)
 ###   MINECRAFT_BUILD directory for Spigot build files (default: /minecraft/build)
 ###   MINECRAFT_JAR directory for newly-built Spigot jar files (default: /minecraft/jar)
@@ -22,9 +22,7 @@ MAINTAINER Joshua Krage <jkrage@guisarme.us>
 ###   FILE_BUILDTOOL sets download location for Spigot's BuildTools
 ###     (default: https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/    BuildTools.jar)
 ###
-ENV JVM_OPT_Xmx="-Xmx1024M"
-ENV JVM_OPT_Xms="-Xms512M"
-ENV JVM_OPTS="-Xms512M -Xmx1024M"
+ENV JVM_OPTS="-Xms512M -Xmx512M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts"
 ENV SPIGOT_REV="1.8.8"
 ENV SPIGOT_BUILD_REV="latest"
 #
